--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "expo": "^30.0.1",
     "react": "16.5.2",
-    "react-native": "^0.57.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1"
   }
