--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.5.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "udacifitness-calendar": "^11.0.0"
   }
 }
