--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "^30.0.1",
     "react": "16.5.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-navigation": "^2.18.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
     "udacifitness-calendar": "^11.0.0"
