--- a/app.json
+++ b/app.json
@@ -6,9 +6,12 @@
     "privacy": "public",
     "sdkVersion": "30.0.0",
     "platforms": ["ios", "android"],
-    "version": "1.0.0",
+    "version": "1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "notification": {
+      "icon": "./assets/icon.png"
+    },
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -21,7 +24,11 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "org.udacifitness.exp",
       "supportsTablet": true
+    },
+    "android": {
+      "package": "org.udacifitness.exp"
     }
   }
 }
